[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/game/GameCamera.gd" type="Script" id=1]
[ext_resource path="res://src/editor/EditorCamera.gd" type="Script" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://src/UI/GameOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/minigames/PosterMinigame.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/DialogueUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/PauseUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/minigames/BrailleMinigame.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UI/minigames/BikeMinigame.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UI/TransitionsUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/UI/minigames/CarMinigame.tscn" type="PackedScene" id=21]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorCamera" type="Camera2D" parent="."]
zoom = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="GameCamera" type="Camera2D" parent="."]
script = ExtResource( 1 )

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="GameOverlay" parent="UICanvas" instance=ExtResource( 4 )]

[node name="BikeMinigame" parent="UICanvas" instance=ExtResource( 11 )]
visible = false

[node name="DialogueUI" parent="UICanvas" instance=ExtResource( 6 )]
visible = false

[node name="PosterMinigame" parent="UICanvas" instance=ExtResource( 5 )]
visible = false

[node name="BrailleMinigame" parent="UICanvas" instance=ExtResource( 8 )]
visible = false

[node name="SeatSortingUI" parent="UICanvas" instance=ExtResource( 21 )]
visible = false

[node name="TransitionsUI" parent="UICanvas" instance=ExtResource( 15 )]
visible = false

[node name="PauseUI" parent="UICanvas" instance=ExtResource( 7 )]
visible = false
